LightningDev/force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>To Save Patient Data</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>AH-{000}-{MMYYYY}</displayFormat>
        <label>Patient Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>