LightningDev/force-app/main/default/objects/Patient__c/fields/Credit_card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_card_Number__c</fullName>
    <label>Credit card Number</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>