LightningDev/force-app/main/default/objects/Patient__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>pedia</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>dermatology</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>