LightningDev/force-app/main/default/objects/Patient__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deluxe Room</fullName>
            </value>
            <value>
                <fullName>Executive room</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>Wifi</fullName>
            </value>
            <value>
                <fullName>Tv</fullName>
            </value>
            <value>
                <fullName>Non Veg MEAL</fullName>
            </value>
            <value>
                <fullName>Dedicated Nurse</fullName>
            </value>
            <value>
                <fullName>Special Bed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>