LightningDev/force-app/main/default/objects/Patient__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>