LightningDev/force-app/main/default/objects/Patient__c/fields/Original_Fee__c.field-meta.xml
<CustomField>
    <fullName>Original_Fee__c</fullName>
    <label>Original Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>