LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_birth__c</fullName>
    <label>Patient Date of birth</label>
    <type>DateTime</type>
</CustomField>