LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_First_name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_name__c</fullName>
    <description>This is Patient first name</description>
    <inlineHelpText>Do not enter short form</inlineHelpText>
    <label>Patient First name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>