LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_Grade__c.field-meta.xml
<CustomField>
    <fullName>Patient_Grade__c</fullName>
    <formula>IF(RBC__c&gt;=0.90,&quot;A&quot;,IF(AND(RBC__c&gt;0.70,RBC__c&lt;0.90),&quot;B&quot;,IF(AND(RBC__c&gt;0.50,RBC__c&lt;0.70),&quot;C&quot;,&quot;D&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Grade</label>
    <type>Text</type>
</CustomField>