LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mobile_number__c</fullName>
    <label>Patient Mobile number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>