LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_Primary_email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Primary_email__c</fullName>
    <defaultValue>&apos;no@gmail.com&apos;</defaultValue>
    <externalId>true</externalId>
    <label>Patient Primary email</label>
    <type>Email</type>
</CustomField>