LightningDev/force-app/main/default/objects/Patient__c/fields/Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Type__c</fullName>
    <formula>if(year(today())-year( Registration_Date__c)&gt;=15,&quot;Titanium&quot;,if(and(year(today())-year( Registration_Date__c)&gt;=10,year(today())-year( Registration_Date__c)&lt;15),&quot;Gold&quot;,if(and(year(today())-year( Registration_Date__c)&gt;=5,year(today())-year( Registration_Date__c)&lt;10),&quot;sliver&quot;,&quot;Bronze&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Type</label>
    <type>Text</type>
</CustomField>