LightningDev/force-app/main/default/objects/Patient__c/fields/RBC__c.field-meta.xml
<CustomField>
    <fullName>RBC__c</fullName>
    <description>Blood percentage of the patient</description>
    <label>RBC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>