LightningDev/force-app/main/default/objects/Patient__c/fields/Registration_fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_fee__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Registration fee</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>