LightningDev/force-app/main/default/objects/Patient__c/fields/Registration_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>Registration_fee_paid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Registration fee paid</label>
    <type>Checkbox</type>
</CustomField>