LightningDev/force-app/main/default/objects/Patient__c/fields/Summary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Summary_Amount__c</fullName>
    <label>Summary Amount</label>
    <summarizedField>Payment_fee__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_fee__c.Patient__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>