LightningDev/force-app/main/default/objects/Patient__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Department__c, &quot;Ortho&quot;),Registration_fee__c*0.85+ Registration_fee__c,
IF(ISPICKVAL(Department__c, &quot;pedia&quot;), Registration_fee__c*1.21+ Registration_fee__c,
IF(ISPICKVAL(Department__c, &quot;Cardio&quot;), Registration_fee__c*1.33+ Registration_fee__c,
IF(ISPICKVAL(Department__c, &quot;dermatology&quot;), Registration_fee__c*1.56+ Registration_fee__c,IF(ISPICKVAL(Department__c, &quot;hematology&quot;), Registration_fee__c*0.100+ Registration_fee__c,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>