LightningDev/force-app/main/default/objects/Patient__c/fields/Vip_Code__c.field-meta.xml
<CustomField>
    <fullName>Vip_Code__c</fullName>
    <label>Vip Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>