LightningDev/force-app/main/default/objects/Patient__c/recordTypes/Normal_Patient.recordType-meta.xml
<RecordType>
    <fullName>Normal_Patient</fullName>
    <active>true</active>
    <description>For Normal walk-in patient</description>
    <label>Normal Patient</label>
</RecordType>