LightningDev/force-app/main/default/objects/Patient__c/recordTypes/Vip_Patient.recordType-meta.xml
<RecordType>
    <fullName>Vip_Patient</fullName>
    <active>true</active>
    <description>For Vip Use</description>
    <label>Vip Patient</label>
</RecordType>